Clean genres page and add dynamic placeholders

--- a/new-movies.html
+++ b/new-movies.html
@@ -76,172 +76,11 @@
     <!-- New Movies Grid -->
     <main class="main-content">
         <div class="container">
-            <div class="movie-grid compact">
-                <!-- Movie 1 -->
-                <article class="movie-card compact">
-                    <div class="movie-poster">
-                        <img src="/placeholder.svg?height=600&width=400" alt="Avatar: The Way of Water" loading="lazy">
-                        <div class="movie-overlay">
-                            <button class="play-btn small">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="5,3 19,12 5,21"></polygon>
-                                </svg>
-                                Xem
-                            </button>
-                        </div>
-                    </div>
-                    <div class="movie-info">
-                        <h3 class="movie-title">Avatar: The Way of Water</h3>
-                        <div class="movie-meta">
-                            <span class="year">2022</span>
-                            <div class="rating">
-                                <svg class="star-icon" width="12" height="12" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"></polygon>
-                                </svg>
-                                <span>8.5</span>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-
-                <!-- Movie 2 -->
-                <article class="movie-card compact">
-                    <div class="movie-poster">
-                        <img src="/placeholder.svg?height=600&width=400" alt="Top Gun: Maverick" loading="lazy">
-                        <div class="movie-overlay">
-                            <button class="play-btn small">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="5,3 19,12 5,21"></polygon>
-                                </svg>
-                                Xem
-                            </button>
-                        </div>
-                    </div>
-                    <div class="movie-info">
-                        <h3 class="movie-title">Top Gun: Maverick</h3>
-                        <div class="movie-meta">
-                            <span class="year">2022</span>
-                            <div class="rating">
-                                <svg class="star-icon" width="12" height="12" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"></polygon>
-                                </svg>
-                                <span>9.1</span>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-
-                <!-- Movie 3 -->
-                <article class="movie-card compact">
-                    <div class="movie-poster">
-                        <img src="/placeholder.svg?height=600&width=400" alt="Black Panther: Wakanda Forever" loading="lazy">
-                        <div class="movie-overlay">
-                            <button class="play-btn small">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="5,3 19,12 5,21"></polygon>
-                                </svg>
-                                Xem
-                            </button>
-                        </div>
-                    </div>
-                    <div class="movie-info">
-                        <h3 class="movie-title">Black Panther: Wakanda Forever</h3>
-                        <div class="movie-meta">
-                            <span class="year">2022</span>
-                            <div class="rating">
-                                <svg class="star-icon" width="12" height="12" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"></polygon>
-                                </svg>
-                                <span>7.8</span>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-
-                <!-- Movie 4 -->
-                <article class="movie-card compact">
-                    <div class="movie-poster">
-                        <img src="/placeholder.svg?height=600&width=400" alt="The Batman" loading="lazy">
-                        <div class="movie-overlay">
-                            <button class="play-btn small">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="5,3 19,12 5,21"></polygon>
-                                </svg>
-                                Xem
-                            </button>
-                        </div>
-                    </div>
-                    <div class="movie-info">
-                        <h3 class="movie-title">The Batman</h3>
-                        <div class="movie-meta">
-                            <span class="year">2022</span>
-                            <div class="rating">
-                                <svg class="star-icon" width="12" height="12" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"></polygon>
-                                </svg>
-                                <span>8.2</span>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-
-                <!-- Movie 5 -->
-                <article class="movie-card compact">
-                    <div class="movie-poster">
-                        <img src="/placeholder.svg?height=600&width=400" alt="Doctor Strange in the Multiverse of Madness" loading="lazy">
-                        <div class="movie-overlay">
-                            <button class="play-btn small">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="5,3 19,12 5,21"></polygon>
-                                </svg>
-                                Xem
-                            </button>
-                        </div>
-                    </div>
-                    <div class="movie-info">
-                        <h3 class="movie-title">Doctor Strange in the Multiverse of Madness</h3>
-                        <div class="movie-meta">
-                            <span class="year">2022</span>
-                            <div class="rating">
-                                <svg class="star-icon" width="12" height="12" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"></polygon>
-                                </svg>
-                                <span>7.0</span>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-
-                <!-- Movie 6 -->
-                <article class="movie-card compact">
-                    <div class="movie-poster">
-                        <img src="/placeholder.svg?height=600&width=400" alt="Jurassic World Dominion" loading="lazy">
-                        <div class="movie-overlay">
-                            <button class="play-btn small">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="5,3 19,12 5,21"></polygon>
-                                </svg>
-                                Xem
-                            </button>
-                        </div>
-                    </div>
-                    <div class="movie-info">
-                        <h3 class="movie-title">Jurassic World Dominion</h3>
-                        <div class="movie-meta">
-                            <span class="year">2022</span>
-                            <div class="rating">
-                                <svg class="star-icon" width="12" height="12" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"></polygon>
-                                </svg>
-                                <span>6.1</span>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-            </div>
+              <div class="movie-grid compact" id="new-grid"></div>
         </div>
     </main>
 
     <script type="module" src="script.js"></script>
+    <script type="module" src="newMoviesPage.js"></script>
 </body>
 </html>
