--- a/rankings.html
+++ b/rankings.html
@@ -78,107 +78,7 @@
         <div class="container">
             <!-- Top 3 Featured -->
             <section class="top-featured-movies">
-                <!-- Movie 1 -->
-                <div class="ranking-card-wrapper">
-                    <div class="ranking-badge top-1">1</div>
-                    <article class="movie-card">
-                        <div class="movie-poster">
-                            <img src="/placeholder.svg?height=600&width=400" alt="Top Gun: Maverick" loading="lazy">
-                            <div class="movie-overlay">
-                                <button class="play-btn">
-                                    <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                                        <polygon points="5,3 19,12 5,21"></polygon>
-                                    </svg>
-                                    Xem Ngay
-                                </button>
-                            </div>
-                        </div>
-                        <div class="movie-info">
-                            <h3 class="movie-title">Top Gun: Maverick</h3>
-                            <p class="movie-genre">Action, Drama</p>
-                            <div class="movie-meta">
-                                <div class="meta-left">
-                                    <div class="rating">
-                                        <svg class="star-icon" width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                            <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"></polygon>
-                                        </svg>
-                                        <span>9.1</span>
-                                    </div>
-                                    <span class="year">2022</span>
-                                </div>
-                                <span class="duration">131 min</span>
-                            </div>
-                        </div>
-                    </article>
-                </div>
-
-                <!-- Movie 2 -->
-                <div class="ranking-card-wrapper">
-                    <div class="ranking-badge top-2">2</div>
-                    <article class="movie-card">
-                        <div class="movie-poster">
-                            <img src="/placeholder.svg?height=600&width=400" alt="Spider-Man: No Way Home" loading="lazy">
-                            <div class="movie-overlay">
-                                <button class="play-btn">
-                                    <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                                        <polygon points="5,3 19,12 5,21"></polygon>
-                                    </svg>
-                                    Xem Ngay
-                                </button>
-                            </div>
-                        </div>
-                        <div class="movie-info">
-                            <h3 class="movie-title">Spider-Man: No Way Home</h3>
-                            <p class="movie-genre">Action, Adventure</p>
-                            <div class="movie-meta">
-                                <div class="meta-left">
-                                    <div class="rating">
-                                        <svg class="star-icon" width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                            <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"></polygon>
-                                        </svg>
-                                        <span>8.7</span>
-                                    </div>
-                                    <span class="year">2021</span>
-                                </div>
-                                <span class="duration">148 min</span>
-                            </div>
-                        </div>
-                    </article>
-                </div>
-
-                <!-- Movie 3 -->
-                <div class="ranking-card-wrapper">
-                    <div class="ranking-badge top-3">3</div>
-                    <article class="movie-card">
-                        <div class="movie-poster">
-                            <img src="/placeholder.svg?height=600&width=400" alt="Avatar: The Way of Water" loading="lazy">
-                            <div class="movie-overlay">
-                                <button class="play-btn">
-                                    <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                                        <polygon points="5,3 19,12 5,21"></polygon>
-                                    </svg>
-                                    Xem Ngay
-                                </button>
-                            </div>
-                        </div>
-                        <div class="movie-info">
-                            <h3 class="movie-title">Avatar: The Way of Water</h3>
-                            <p class="movie-genre">Sci-Fi, Adventure</p>
-                            <div class="movie-meta">
-                                <div class="meta-left">
-                                    <div class="rating">
-                                        <svg class="star-icon" width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                            <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"></polygon>
-                                        </svg>
-                                        <span>8.5</span>
-                                    </div>
-                                    <span class="year">2022</span>
-                                </div>
-                                <span class="duration">192 min</span>
-                            </div>
-                        </div>
-                    </article>
-                </div>
+                <div class="featured-grid"></div>
             </section>
 
             <!-- Rankings List -->
@@ -189,47 +89,12 @@
                     </svg>
                     Top 10 Phim Hot
                 </h2>
-                <div class="rankings-list">
-                    <!-- Movie 4 -->
-                    <div class="ranking-item">
-                        <div class="ranking-number rank-4">4</div>
-                        <div class="ranking-poster">
-                            <img src="/placeholder.svg?height=600&width=400" alt="The Batman" loading="lazy">
-                        </div>
-                        <div class="ranking-info">
-                            <h3 class="ranking-movie-title">The Batman</h3>
-                            <p class="ranking-movie-meta">Action, Crime • 2022</p>
-                        </div>
-                        <div class="ranking-details">
-                            <div class="ranking-rating">
-                                <span class="font-bold">8.2</span>
-                            </div>
-                            <p class="ranking-duration">176 min</p>
-                        </div>
-                    </div>
-
-                    <!-- Movie 5 -->
-                    <div class="ranking-item">
-                        <div class="ranking-number rank-5">5</div>
-                        <div class="ranking-poster">
-                            <img src="/placeholder.svg?height=600&width=400" alt="Dune" loading="lazy">
-                        </div>
-                        <div class="ranking-info">
-                            <h3 class="ranking-movie-title">Dune</h3>
-                            <p class="ranking-movie-meta">Sci-Fi, Adventure • 2021</p>
-                        </div>
-                        <div class="ranking-details">
-                            <div class="ranking-rating">
-                                <span class="font-bold">8.0</span>
-                            </div>
-                            <p class="ranking-duration">155 min</p>
-                        </div>
-                    </div>
-                </div>
+                  <div class="rankings-list"></div>
             </section>
         </div>
     </main>
 
     <script type="module" src="script.js"></script>
+    <script type="module" src="rankingsPage.js"></script>
 </body>
 </html>
