--- a/index.html
+++ b/index.html
@@ -146,97 +146,7 @@
     <section class="section">
         <div class="container">
             <h2 class="section-title">Phim Nổi Bật</h2>
-            <div class="movie-grid">
-                <article class="movie-card">
-                    <div class="movie-poster">
-                        <img src="/placeholder.svg?height=600&width=400" alt="Avatar: The Way of Water" loading="lazy">
-                        <div class="movie-overlay">
-                            <button class="play-btn">
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="5,3 19,12 5,21"></polygon>
-                                </svg>
-                                Xem Ngay
-                            </button>
-                        </div>
-                    </div>
-                    <div class="movie-info">
-                        <h3 class="movie-title">Avatar: The Way of Water</h3>
-                        <p class="movie-genre">Sci-Fi, Adventure</p>
-                        <div class="movie-meta">
-                            <div class="meta-left">
-                                <div class="rating">
-                                    <svg class="star-icon" width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                        <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"></polygon>
-                                    </svg>
-                                    <span>8.5</span>
-                                </div>
-                                <span class="year">2022</span>
-                            </div>
-                            <span class="duration">192 min</span>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="movie-card">
-                    <div class="movie-poster">
-                        <img src="/placeholder.svg?height=600&width=400" alt="Top Gun: Maverick" loading="lazy">
-                        <div class="movie-overlay">
-                            <button class="play-btn">
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="5,3 19,12 5,21"></polygon>
-                                </svg>
-                                Xem Ngay
-                            </button>
-                        </div>
-                    </div>
-                    <div class="movie-info">
-                        <h3 class="movie-title">Top Gun: Maverick</h3>
-                        <p class="movie-genre">Action, Drama</p>
-                        <div class="movie-meta">
-                            <div class="meta-left">
-                                <div class="rating">
-                                    <svg class="star-icon" width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                        <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"></polygon>
-                                    </svg>
-                                    <span>9.1</span>
-                                </div>
-                                <span class="year">2022</span>
-                            </div>
-                            <span class="duration">131 min</span>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="movie-card">
-                    <div class="movie-poster">
-                        <img src="/placeholder.svg?height=600&width=400" alt="Black Panther: Wakanda Forever" loading="lazy">
-                        <div class="movie-overlay">
-                            <button class="play-btn">
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="5,3 19,12 5,21"></polygon>
-                                </svg>
-                                Xem Ngay
-                            </button>
-                        </div>
-                    </div>
-                    <div class="movie-info">
-                        <h3 class="movie-title">Black Panther: Wakanda Forever</h3>
-                        <p class="movie-genre">Action, Adventure</p>
-                        <div class="movie-meta">
-                            <div class="meta-left">
-                                <div class="rating">
-                                    <svg class="star-icon" width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                        <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"></polygon>
-                                    </svg>
-                                    <span>7.8</span>
-                                </div>
-                                <span class="year">2022</span>
-                            </div>
-                            <span class="duration">161 min</span>
-                        </div>
-                    </div>
-                </article>
-            </div>
+              <div class="movie-grid" id="featured-grid"></div>
         </div>
     </section>
 
@@ -244,111 +154,7 @@
     <section class="section section-dark">
         <div class="container">
             <h2 class="section-title">Xu Hướng</h2>
-            <div class="movie-grid compact">
-                <article class="movie-card compact">
-                    <div class="movie-poster">
-                        <img src="/placeholder.svg?height=600&width=400" alt="The Batman" loading="lazy">
-                        <div class="movie-overlay">
-                            <button class="play-btn small">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="5,3 19,12 5,21"></polygon>
-                                </svg>
-                                Xem
-                            </button>
-                        </div>
-                    </div>
-                    <div class="movie-info">
-                        <h3 class="movie-title">The Batman</h3>
-                        <div class="movie-meta">
-                            <span class="year">2022</span>
-                            <div class="rating">
-                                <svg class="star-icon" width="12" height="12" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"></polygon>
-                                </svg>
-                                <span>8.2</span>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="movie-card compact">
-                    <div class="movie-poster">
-                        <img src="/placeholder.svg?height=600&width=400" alt="Spider-Man: No Way Home" loading="lazy">
-                        <div class="movie-overlay">
-                            <button class="play-btn small">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="5,3 19,12 5,21"></polygon>
-                                </svg>
-                                Xem
-                            </button>
-                        </div>
-                    </div>
-                    <div class="movie-info">
-                        <h3 class="movie-title">Spider-Man: No Way Home</h3>
-                        <div class="movie-meta">
-                            <span class="year">2021</span>
-                            <div class="rating">
-                                <svg class="star-icon" width="12" height="12" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"></polygon>
-                                </svg>
-                                <span>8.7</span>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="movie-card compact">
-                    <div class="movie-poster">
-                        <img src="/placeholder.svg?height=600&width=400" alt="Dune" loading="lazy">
-                        <div class="movie-overlay">
-                            <button class="play-btn small">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="5,3 19,12 5,21"></polygon>
-                                </svg>
-                                Xem
-                            </button>
-                        </div>
-                    </div>
-                    <div class="movie-info">
-                        <h3 class="movie-title">Dune</h3>
-                        <div class="movie-meta">
-                            <span class="year">2021</span>
-                            <div class="rating">
-                                <svg class="star-icon" width="12" height="12" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"></polygon>
-                                </svg>
-                                <span>8.0</span>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="movie-card compact">
-                    <div class="movie-poster">
-                        <img src="/placeholder.svg?height=600&width=400" alt="No Time to Die" loading="lazy">
-                        <div class="movie-overlay">
-                            <button class="play-btn small">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="5,3 19,12 5,21"></polygon>
-                                </svg>
-                                Xem
-                            </button>
-                        </div>
-                    </div>
-                    <div class="movie-info">
-                        <h3 class="movie-title">No Time to Die</h3>
-                        <div class="movie-meta">
-                            <span class="year">2021</span>
-                            <div class="rating">
-                                <svg class="star-icon" width="12" height="12" viewBox="0 0 24 24" fill="currentColor">
-                                    <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"></polygon>
-                                </svg>
-                                <span>7.3</span>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-            </div>
+              <div class="movie-grid compact" id="trending-grid"></div>
         </div>
     </section>
 
@@ -356,32 +162,7 @@
     <section class="section">
         <div class="container">
             <h2 class="section-title">Thể Loại</h2>
-            <div class="genre-grid">
-                <a href="genres.html" class="genre-card action">
-                    <div class="genre-overlay"></div>
-                    <h3>Hành Động</h3>
-                </a>
-                <a href="genres.html" class="genre-card horror">
-                    <div class="genre-overlay"></div>
-                    <h3>Kinh Dị</h3>
-                </a>
-                <a href="genres.html" class="genre-card comedy">
-                    <div class="genre-overlay"></div>
-                    <h3>Hài Hước</h3>
-                </a>
-                <a href="genres.html" class="genre-card romance">
-                    <div class="genre-overlay"></div>
-                    <h3>Lãng Mạn</h3>
-                </a>
-                <a href="genres.html" class="genre-card scifi">
-                    <div class="genre-overlay"></div>
-                    <h3>Sci-Fi</h3>
-                </a>
-                <a href="genres.html" class="genre-card documentary">
-                    <div class="genre-overlay"></div>
-                    <h3>Tài Liệu</h3>
-                </a>
-            </div>
+              <div class="genre-grid"></div>
         </div>
     </section>
 
@@ -425,5 +206,6 @@
     </footer>
 
     <script type="module" src="script.js"></script>
+    <script type="module" src="indexPage.js"></script>
 </body>
 </html>
